# src/TemplateV4.Angular/src/app/api/models.ts
@@ -38,7 +38,6 @@ export type { PageOfFileItem } from './models/page-of-file-item';
 export type { PageOfInvitationItem } from './models/page-of-invitation-item';
 export type { PageOfNotificationItem } from './models/page-of-notification-item';
 export type { PageOfRoleItem } from './models/page-of-role-item';
-export type { PageOfUserDto } from './models/page-of-user-dto';
 export type { PasskeyChallengeRequest } from './models/passkey-challenge-request';
 export type { PasskeyCredential } from './models/passkey-credential';
 export type { PasskeyOptions } from './models/passkey-options';
@@ -60,4 +59,5 @@ export type { SecuritySettings } from './models/security-settings';
 export type { SessionDto } from './models/session-dto';
 export type { UpdateUser } from './models/update-user';
 export type { UserAccessDetail } from './models/user-access-detail';
+export type { UserDirectoryPage } from './models/user-directory-page';
 export type { UserDto } from './models/user-dto';
