# src/TemplateV4.Angular/src/app/api/models/user-directory-page.ts
@@ -2,9 +2,13 @@
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
 import { UserDto } from '../models/user-dto';
-export interface PageOfUserDto {
+export interface UserDirectoryPage {
+  active: number;
+  disabled: number;
+  invited: number;
   items: Array<UserDto>;
   pageNumber: number;
   pageSize: number;
+  roles: Array<string>;
   total: number;
 }
